thumb-nail html

--- a/index.html
+++ b/index.html
@@ -9,30 +9,34 @@
     <title>Document</title>
 </head>
 <body>
-    <main>
-        
-        <div id="container">
 
-            <button id="arrow-up-carousel"><i class="fa-solid fa-arrow-up"></i> 
-            </button>
-            <button id="arrow-down-carousel"><i class="fa-solid fa-arrow-down"></i>
-            </button>
-           <div id="thumb-nail">
+        <div id="app">
+            <div id="container">
 
-           </div>
-            <button id="start-button" class="hidden">
-                Start
-            </button>
-            <button id="stop-button">
-                Stop
-            </button>
-            <button id="reverse-button">
-                Reverse
-            </button>
+                <button id="arrow-up-carousel"><i class="fa-solid fa-arrow-up"></i> 
+                </button>
+                <button id="arrow-down-carousel"><i class="fa-solid fa-arrow-down"></i>
+                </button>
+
+                <img :src="this.images[index]" alt="" class="">
+            <div id="thumb-nail">
+                <img v-for="(image, index) in images" :src="this.images[index]" alt="" class="img-thumb-nail">
+            </div>
+                <button id="start-button" class="hidden">
+                    Start
+                </button>
+                <button id="stop-button">
+                    Stop
+                </button>
+                <button id="reverse-button">
+                    Reverse
+                </button>
         </div>
 
-        <script type="text/javascript" src="js/main.js">
-        </script>
-    </main>
+        
+
+
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
