--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
                 <img :src="this.images[indexImmagineAttiva]" alt="" class="">
                 <div id="thumb-nail">
-                    <img v-for="(image, index) in images" :src="this.images[index]" alt="" :class="indexImmagineAttiva === index ? 'thumb-nail-selected' : '' " class="img-thumb-nail">
+                    <img v-for="(image, index) in images" :src="this.images[index]" alt="" :class="indexImmagineAttiva === index ? 'thumb-nail-selected' : '' " class="img-thumb-nail" @click="this.indexImmagineAttiva = this.images.indexOf(image)">
                 </div>
                 <button id="start-button" class="hidden">
                     Start
